# temp-gateway

./: .gitignore  CMakeLists.txt  README.md  can_utils.cpp  can_utils.h  constants.h  ctrl_manager.cpp  ctrl_manager.h  encoder_logger.cpp  encoder_logger.h  global_variable.h  logger.cpp  logger.h  main.cpp  pot_handler.cpp  pot_handler.h  stdin_writer.cpp  stdin_writer.h  system_state.h  thread_priority.h  thread_safe_store.h  thread_safe_vector.h  time_utils.h  udj1_handler.cpp  udj1_handler.h
bash/: build.sh  can_end.sh  can_startup.sh  clean.sh  run.sh
logs/: log_udp_20260124_115017.csv  log_udp_20260124_205028.csv  log_udp_20260126_034347.csv  log_udp_20260126_035042.csv  log_udp_20260126_210310.csv  log_udp_20260126_212530.csv  log_udp_20260126_212817.csv  log_udp_20260126_213459.csv  log_udp_20260208_210604.csv
